--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="stlyes.css">
     <script src ="library.js" defer></script>
+    <style>
+        #form{
+            display: none;
+            margin-top: 20px;
+            border: 1px solid #ccc;
+            padding: 20px;
+            width: 300px;
+            background-color: #f9f9f9;
+        }
+    </style>
 </head>
 <body>
     <div class="library"></div>
@@ -20,7 +30,18 @@
             </thead>
             <tbody id="bookList"></tbody>
         </table>
-        <button class="newbook">Add book</button>
+        <button id="newbook">Add New book</button>
+    </div>
+    <div id="form">
+        <form action="/action_page.php" method="get">
+            <label for="title">Enter Title:</label>
+            <input type="text" id="title" name="title"><br><br>
+            <label for="author">Author: </label>
+            <input type="text" id="author" name="author"><br><br>
+            <label for="pages">Number: </label>
+            <input type="number" id="pages" name="pages"><br><br>
+            <input type="submit" value="Submit">
+          </form>
     </div>
 </body>
 </html>
