--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <button id="newbook">Add New book</button>
     </div>
     <div id="form">
-        <form action="/action_page.php" method="get">
+        <form id = "bookForm">
             <label for="title">Enter Title:</label>
             <input type="text" id="title" name="title"><br><br>
             <label for="author">Author: </label>
             <input type="text" id="author" name="author"><br><br>
-            <label for="pages">Number: </label>
+            <label for="pages">Pages: </label>
             <input type="number" id="pages" name="pages"><br><br>
             <input type="submit" value="Submit">
           </form>
